--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <p class="parrafos">Lorem ipsum dolor sit amet consectetur adipiscing elit tempor vulputate blandit, 
                             class cursus eu condimentum molestie dictumst sed sollicitudin nisi, felis ac 
                             nostra ornare egestas nulla aliquet conubia nascetur. Eu at torquent vitae cras 
-                            ante cum imperdiet faucibus nulla nostra suspendisse, platea mus pulvinar  
+                            ante cum imperdiet faucibus nulla nostra suspendisse, platea mus   
                              
                             </p>
                         <a href="pages/quienes_somos.html"><button class="botones_conoce_mas">Ver más sobre el estudio</button></a>
